# docs/swagger.json
@@ -132,6 +132,44 @@
         },
         "/api/center_request/current": {
             "get": {
+                "description": "Возвращает ID текущего чернового заказа и количество добавленных экспертов.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CenterRequest"
+                ],
+                "summary": "Получить информацию о текущем черновом заказе",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.DTO_Resp_CurrCenterRequestInfo"
+                        }
+                    },
+                    "401": {
+                        "description": "Требуется авторизация",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка при получении данных",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/center_request/{id}": {
+            "get": {
                 "description": "Возвращает детальную информацию о заявке на анализ по её идентификатору",
                 "consumes": [
                     "application/json"
@@ -172,9 +210,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/api/center_request/{id}": {
+            },
             "put": {
                 "description": "Обновляет статус заявки и/или модератора, если это требуется",
                 "consumes": [
